# glacier

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/bindings/: CMakeLists.txt  glacier.cpp  glacier.hpp
src/common/: CMakeLists.txt  prelude.hpp
src/common/geometry/: CMakeLists.txt  bezier_patch.cpp  bezier_patch.hpp  bezier_patch_geo.cpp  bezier_patch_geo.hpp  cuboid.cpp  cuboid.hpp  cuboid_geo.cpp  cuboid_geo.hpp  disk.cpp  disk.hpp  disk_geo.cpp  disk_geo.hpp  geometry.cpp  geometry.hpp  indexed_mesh.hpp  mesh.cpp  mesh.hpp  mesh_geo.cpp  mesh_geo.hpp  nurbs.cpp  nurbs.hpp  nurbs_geo.cpp  nurbs_geo.hpp  obj_parser.cpp  obj_parser.hpp  polygon_soup.cpp  polygon_soup.hpp  quad.cpp  quad.hpp  quad_geo.cpp  quad_geo.hpp  sphere.cpp  sphere.hpp  sphere_geo.cpp  sphere_geo.hpp  transform.cpp  transform.hpp  triangle.cpp  triangle.hpp  (+9 more)
src/common/math/: CMakeLists.txt  aabb.cpp  aabb.hpp  almost.hpp  constants.hpp  interpolation.hpp  interval.cpp  interval.hpp  matrix.hpp  normal.hpp  numeric.hpp  point.hpp  ray.cpp  ray.hpp  rootfinding.cpp  rootfinding.hpp  transform.cpp  transform.hpp  transformation.hpp  vector.hpp  vector_ops.cpp  vector_ops.hpp
src/common/util/: CMakeLists.txt  files.cpp  (+8 more)
src/geometry/: CMakeLists.txt  bezier_patch.cpp  bezier_patch.hpp  bezier_patch_geo.cpp  bezier_patch_geo.hpp  cuboid_geo.cpp  cuboid_geo.hpp  disk_geo.cpp  disk_geo.hpp  geometry.cpp  geometry.hpp  indexed_mesh.hpp  intersect.hpp  mesh_geo.cpp  mesh_geo.hpp  nurbs_geo.cpp  nurbs_geo.hpp  obj_parser.cpp  obj_parser.hpp  polygon_soup.hpp  primitive.cpp  primitive.hpp  quad_geo.cpp  quad_geo.hpp  sphere.cpp  sphere.hpp  sphere_geo.cpp  sphere_geo.hpp  triangle_geo.cpp  triangle_geo.hpp  tube_geo.cpp  tube_geo.hpp  vertex.hpp
src/material/: CMakeLists.txt  dielectric.cpp  dielectric.hpp  emissive.cpp  emissive.hpp  lambertian.cpp  lambertian.hpp  material.cpp  material.hpp  mirror_specular.cpp  mirror_specular.hpp  scatter_record.cpp  scatter_record.hpp  specular.cpp  specular.hpp  surface_interaction.cpp  surface_interaction.hpp
src/math/: CMakeLists.txt  almost.hpp  constants.hpp  interpolation.hpp  interval.cpp  interval.hpp  matrix.hpp  numeric.hpp  point.hpp  ray.cpp  ray.hpp  rootfinding.cpp  rootfinding.hpp  transform.hpp  transformation.hpp  vector.hpp  vector_ops.cpp  vector_ops.hpp
src/primitive/: CMakeLists.txt  cuboid.cpp  cuboid.hpp  cuboid_prim.cpp  cuboid_prim.hpp  disk.cpp  disk.hpp  disk_prim.cpp  disk_prim.hpp  intersect.cpp  intersect.hpp  mesh.cpp  mesh.hpp  mesh_prim.cpp  mesh_prim.hpp  primitive.cpp  primitive.hpp  quad.cpp  quad.hpp  quad_prim.cpp  quad_prim.hpp  sphere.cpp  sphere.hpp  sphere_prim.cpp  sphere_prim.hpp  triangle.cpp  triangle.hpp  triangle_prim.cpp  triangle_prim.hpp  tube.cpp  tube.hpp  tube_prim.cpp  tube_prim.hpp
src/render/: CMakeLists.txt  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  config.hpp  image.cpp  image.hpp  matrix_stack.cpp  matrix_stack.hpp  pathtracer.cpp  pathtracer.hpp  prim_list.cpp  prim_list.hpp  primitive_builder.hpp  spatial_structure.hpp
src/scene/: CMakeLists.txt  bezier_patch_node.cpp  bezier_patch_node.hpp  cuboid_node.cpp  cuboid_node.hpp  disk_node.cpp  disk_node.hpp  geometry_node.cpp  geometry_node.hpp  mesh_node.cpp  mesh_node.hpp  quad_node.cpp  quad_node.hpp  scene_graph.cpp  scene_graph.hpp  scene_node.cpp  scene_node.hpp  sphere_node.cpp  sphere_node.hpp  transform.cpp  triangle_node.cpp  triangle_node.hpp  tube_node.cpp  tube_node.hpp
src/util/: CMakeLists.txt  common.hpp  files.cpp  files.hpp  format.hpp  formatter.hpp  formatter_std.hpp  log.hpp  stringbuffer.cpp  stringbuffer.hpp  thread_random.hpp
(+88 files in other folders)
